--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^19.2.0",
+    "prettier": "^3.7.4",
     "typescript": "~5.7.2"
   }
 }
